<resources>
    <string name="app_name">ui_dashboard</string>
    <string name="record">ChatGPT 股市預測</string>
    <string name="shot_views">Shot Views</string>
    <string name="more">more</string>
    <string name="clients">clients</string>
    <string name="_395">395</string>
    <string name="impacked">impacked</string>
    <string name="_157">157</string>
    <string name="following">Following</string>
    <string name="_820">820</string>
    <string name="_186">$186</string>
    <string name="this_is_a_demo">This is a demo</string>
    <string name="taiwan_taipei">Taiwan Taipei</string>
    <string name="_10am_06pm">10am~06pm</string>
    <string name="chatgpt">ChatGPT</string>
    <string name="holder">觀望</string>
    <string name="sellout">賣出</string>
    <string name="buyin">買進</string>
    <string name="best_4_points">Best 4 Points</string>
    <string name="_0">0</string>
    <string name="loading">Loading</string>
</resources>