<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_16sdp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:cardBackgroundColor="@color/dashoard_item_3"
        app:cardCornerRadius="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="45dp"
            android:layout_height="51dp"
            android:layout_margin="@dimen/_8sdp"
            android:src="@drawable/ic_acid"
            app:tint="@color/white" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_40sdp"
            android:paddingLeft="@dimen/_40sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <TextView
                android:id="@+id/textAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_186"
                android:textColor="@color/primary"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:text="@string/this_is_a_demo"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toStartOf="@+id/textAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/chartImageView"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="@+id/textTitle"
                app:layout_constraintTop_toBottomOf="@+id/textTitle"
                app:tint="@color/secondary_text" />

            <TextView
                android:id="@+id/textlocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taiwan_taipei"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@id/imageLocation"
                app:layout_constraintStart_toEndOf="@id/imageLocation"
                app:layout_constraintTop_toTopOf="@id/imageLocation" />

            <TextView
                android:id="@+id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/_10am_06pm"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/textlocation"
                app:layout_constraintTop_toBottomOf="@id/textlocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>